--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ project (cryptography)
 # Set path to c++ compiler
 set(CMAKE_CXX_COMPILER /usr/bin/g++)
 
+# Set compiler warnings
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+
 # Folder alias
 set (SRC_DIR ${CMAKE_SOURCE_DIR}/src)
 set (TOOLS_DIR ${CMAKE_SOURCE_DIR}/tools)
